[package]
name = "nft"
edition = "2021"
version = "0.1.0"
license = "MIT"
description = "The Contract for NFT-721 platform"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"

[dependencies]
near-sdk = "4.0.0"
unidecode = "0.3.0"
